style/databases.css
/* databases page style */

.databases-page {
	display: flex;
	height: 100%;
	width: 100%;
	align-items: center;
	vertical-align: text-top;

	background-color: var(--primary-color-main);
}

/* Canvas for 3d object */
canvas {
	width: 320px;
	height: 291px;
	background-color: lightgray;

	border: 2px solid #04445f;
	border-radius: 10px;
}

/* Content */
.left-content {
	width: 75%;
	height: 100%;
	display: flex;

	margin: 0px 0px 0px 0px;
}

.left-content-wraper {
	margin: 24px 20px 0px 24px;

	display: flex;
	gap: 20px;
	flex-direction: column;
	width: 100%;
}

.right-content {
	display: flex;
	justify-content: flex-end;
	width: 25%;

	padding-right: 12px;
}

/* Input button */
input[type="file"] {
	display: none;
}

.upload-container {
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: var(--primary-color-25);
	padding: 0;
	border: 1px solid var(--primary-color-100);
	border-radius: 14.3734px;
	width: 46.99px;
	height: 46.99px;
	cursor: pointer;
}

.upload-container:hover {
	box-shadow: 0px 4px 4px #00000040;
}

/* Pop up notification */
.pop-up-container {
	display: none;
	position: absolute;
	z-index: 10;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	background-color: rgba(0, 0, 0, 0.3);
}

.pop-up-box {
	display: flex;
	flex-direction: column;
	position: absolute;
	z-index: 10;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	margin: auto;
	justify-content: space-between;
	align-items: flex-start;
	text-align: start;

	padding: 14px;
	box-sizing: border-box;
	width: 290px;
	height: 141px;

	background: var(--background-color-25);
	border: 1px solid var(--primary-color-200);
	box-shadow: 0px 4px 4px var(--primary-color-100);
	border-radius: 2px;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
}

.pop-up-button {
	width: 109px;
	height: 31px;

	border: 1px solid var(--primary-color-50);
	border-radius: 2px;

	font-size: 16px;
	line-height: 18px;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;

	color: var(--primary-color-100);
}

.pop-up-button:hover {
	filter: drop-shadow(0px 4px 4px var(--primary-color-100));
}

.pop-up-title {
	font-weight: 700;
	font-size: 18px;
	line-height: 21px;
	display: flex;
	align-items: center;

	color: var(--primary-color-100);
}

.pop-up-text {
	font-size: 16px;
	line-height: 18px;
	display: flex;
	align-items: center;

	color: var(--primary-color-100);
}

.pop-up-text-file-name {
	font-size: 14px;
	line-height: 18px;
	display: flex;
	align-items: center;

	color: var(--primary-color-100);
}

.pop-up-button-container {
	width: 100%;
	display: flex;
	justify-content: space-between;
}

/* Page Name */
.page-name-container {
	padding: 18px 50px 18px 50px;
	background: var(--primary-color-50);
	/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
	border-radius: 5px;
	height: fit-content;
	width: fit-content;
}

.page-name-text {
	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 700;
	font-size: 24px;
	line-height: 28px;
	text-align: center;
	color: var(--primary-color-200);
}

/* database header (search bar, filter, etc) */
.database-header {
	display: flex;
	gap: 17px;
}

.search-container {
	width: 287px;
	height: 32px;

	background: #ffffff;

	border: 2px solid #189ab4;

	display: flex;
	justify-content: space-between;
	padding: 5px 5px 5px 5px;
}
.search-text {
	width: 100%;
	border: none;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18.7322px;
	line-height: 22px;

	display: flex;
	align-items: center;

	padding-left: 15px;

	color: #7c8da5;
}

.search-text:focus {
	outline: none;
}

.search-img {
	width: fit-content;
	background-color: transparent;
	border: none;
	cursor: pointer;
}

.filter-container {
	width: 177px;
	height: 33px;

	background: #f2f4f7;

	border: 2px solid #189ab4;
	border-radius: 10px;

	display: flex;
	align-items: center;
	/* justify-content: center; */

	padding: 5px 5px 5px 5px;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18px;

	color: #04445f;
	flex-direction: column;
}

.filter-img {
	width: fit-content;
}

.filter-text {
	width: 100%;
	cursor: pointer;

	display: flex;
	align-items: center;
	gap: 10px;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 21px;

	color: #04445f;
}

.filter-sort-box {
	min-width: 25px;
	min-height: 25px;

	background: #d4f2f4;
	border-radius: 5px;

	display: flex;
	justify-content: center;

	cursor: pointer;

	padding: 3px;
}

.filter-wrap {
	display: flex;
	width: 100%;
	margin-top: 1px;
}

.filter-drop-down {
	position: relative;
	z-index: 3;

	width: 187px;
	/* height: 169px; */

	background: #f2f4f7;

	border: 1px solid #189ab4;
	border-radius: 10px;

	margin-top: 20px;
	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 14px;
	line-height: 16px;
}

.filter-drop-down-wrap {
	margin: 10px 10px 10px 10px;

	width: 100%;
}

.filter-drop-down-title {
	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 14px;
	line-height: 16px;

	color: #189ab4;
	margin-bottom: 10px;
}

.filter-drop-down-item {
	display: flex;
	justify-content: space-between;
	padding: 12px 4px 12px 4px;

	cursor: pointer;
}

.filter-drop-down-item:hover {
	background: #d4f2f4;
	border-radius: 5px;
}

input[type="radio"] {
	appearance: none;
	content: "";
	background-color: transparent;
	width: 15px;
	height: 15px;
	border-radius: 50%;
	transition: 0.25s ease;
	box-shadow: inset 0 0 0 1.5px #189ab4;
}

input[type="radio"]:checked {
	box-shadow: inset 0 0 0 5.2px #189ab4;
}

label {
	cursor: pointer;
}

/* 3d File Kategori Dropdown */
.category {
	display: flex;

	align-items: center;
	gap: 10px;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 21px;

	color: var(--text-color-database-data);
	margin-left: 40px;
}

.select-menu {
	min-width: 122px;
	height: 37px;
}

.select-menu .select-menu-button {
	display: flex;
	flex-direction: row;
	align-items: center;
	padding: 5px 10px;
	cursor: pointer;
	justify-content: space-between;

	background: transparent;

	border: 1px solid #189ab4;
	border-radius: 15px;
}

.select-menu-button img {
	font-size: 25px;
	transition: 0.3s;
}

.select-menu-button span {
	display: flex;
	align-items: center;

	height: 24.66px;
	margin-right: 10px;
}

.select-menu.active .select-menu-button img {
	transform: rotate(-180deg);
}

.select-menu .options {
	position: relative;
	padding: 0;

	margin: 10px 0px 0px 0px;
	background: var(--primary-color-main);
	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
	display: none;

	border-radius: 15px;
}

.select-menu.active .options {
	display: block;
}

.options .option {
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	padding: 8.70307px 12.1843px;
	gap: 6.96px;
	cursor: pointer;

	background: var(--primary-color-main);

	border: 0.870307px solid var(--primary-color-100);
}

.options .option:hover {
	background: var(--background-database-data-select);
}

.option .option-text {
	font-size: 13.9249px;

	color: var(--text-color-database-data);

	height: 24.66px;
}

/* database data (search bar, filter, etc) */
#database-data {
	/* margin: 20px 0px 0px 0px; */

	border-collapse: separate;
	border-spacing: 0 10px;
	width: 100%;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 21px;

	color: var(--text-color-database-data);

	text-align: center;
}

#database-data td,
#database-data th {
	padding: 17px;
}

#database-data tr {
	cursor: pointer;
}

#database-data tr:hover {
	width: 100%;
	/* border: 1.5px solid #98a2b3; */
	filter: drop-shadow(0px 4px 18px var(--text-color-database-data));
}

#database-data tr.active {
	background: var(--background-database-data-select);
}

#database-data tr.active:hover {
	filter: none;
}

#database-data tr.noHover:hover {
	filter: none;
}

#database-data th {
	padding-top: 19px;
	padding-bottom: 19px;

	background: var(--background-header);
	color: #04445f;

	font-family: "Ubuntu";
	font-style: normal;
	font-weight: 400;
	font-size: 18px;
	line-height: 21px;

	border-top: 1.5px solid #189ab4;
	border-bottom: 1.5px solid #189ab4;
}

.left-table {
	border-left: 1.5px solid #189ab4;
}
.right-table {
	border-right: 1.5px solid #189ab4;
}

